Fusion-Qa-Final/src/objects/Country_SalesOrg_CompanyCode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting maps the Country against SalesOrg and Company Code (Seed Data processor.)</description>
    <fields>
        <fullName>Company_Code__c</fullName>
        <description>This derives the company code for the Seed data, to get the pricing and availability based on the Country and sales org defined.</description>
        <label>Company Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_del__c</fullName>
        <description>Country for Seed Data Pricing and availability.</description>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>This derives the sales org for the Seed Data based on the country entered.</description>
        <label>Sales Org</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Country-SalesOrg-CompanyCode</label>
</CustomObject>